--- a/src/app/recursos/auth/login/login.component.html
+++ b/src/app/recursos/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <app-floating-configurator />
 
-<div class="bg-surface-50 dark:bg-surface-950 flex items-center justify-center min-h-screen w-screen overflow-hidden" style="background-image: url('LOGO 1920X1080.png'); background-size: cover">
+<div class="bg-surface-50 dark:bg-surface-950 flex items-center justify-center min-h-screen w-screen overflow-hidden">
   <div class="flex flex-col items-center justify-center">
     <div class="rounded-[56px] p-1" style="background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%)">
       <div class="w-[600px] bg-surface-0 dark:bg-surface-900 py-20 px-8 sm:px-20 rounded-[53px]">
